# amplifier-distro

./: .env.example  .gitignore  AGENTS.md  README.md  install.sh  pyproject.toml
.amplifier/recipes/: README.md  e2e-browser-tests.yaml  github-issue-triage.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deps-update.yml
amplifierd-plugins/amplifierd-plugin-auth/: pyproject.toml
amplifierd-plugins/amplifierd-plugin-distro/tests/: test_reload.py  test_routes_wizard.py  test_static_pages.py
distro-server/: pyproject.toml
distro-server/scripts/: amplifier-distro.service  install-service.sh
distro-server/src/amplifier_distro/: cli.py  conventions.py  overlay.py  service.py  tailscale.py  transcript_persistence.py
distro-server/tests/: test_auth.py  test_chat_app.py  test_chat_commands.py  test_chat_connection.py  test_chat_display_messages.py  test_chat_session_history.py  test_cli_bare_command.py  test_cli_tls_flags.py  test_origins.py  test_overlay.py  test_server.py  test_session_backend.py  test_slack_bridge.py  test_socket_mode.py  test_tailscale.py  test_tls.py  test_tls_startup.py  test_transcript_persistence.py  test_watchdog.py
distro-service/: pyproject.toml
distro-service/src/amplifier_distro/: cli.py  conventions.py
docs/plans/: 2026-02-27-service-commands-amp-distro-fix-design.md  2026-02-27-service-commands-amp-distro-fix-implementation.md  2026-03-03-secure-remote-access-design.md  2026-03-03-secure-remote-access-implementation.md  2026-03-03-web-chat-responsiveness-improvements.md  2026-03-10-bundle-prewarm-design.md
(+45 files in other folders)
