# amplifier-experience/pyproject.toml
[project]
name = "amplifier-experience"
version = "0.1.0"
description = "Amplifier chat experience — amplifierd + chat plugin"
requires-python = ">=3.12"
dependencies = [
    "amplifierd @ git+https://github.com/microsoft/amplifierd@main",
    "amplifierd-plugin-chat @ git+https://github.com/payneio/amplifierd-plugin-chat@main",
]

[project.scripts]
amplifierd-chat = "amplifierd.cli:main"

# Local dev overrides: use sibling checkouts instead of git URLs
# [tool.uv.sources]
# amplifierd = { path = "../amplifierd", editable = true }
# amplifierd-plugin-chat = { path = "../amplifierd-plugin-chat", editable = true }

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
